2001-01-10  Peter Schmid  <schmid@snake.iap.physik.tu-darmstadt.de>

         * include/bits/std_complex.h: Fix a typo.

2001-01-09  Benjamin Kosnik  <bkoz@redhat.com>
	                     <kainz@ilm.com>

	Fixes for libstdc++/1576
	* src/stdstreams.cc: Initialize with NULL filebuf. Delete
	file, move contents into....
	* src/ios.cc: ...Here. Put defines for iostreams objects and
	initialization routines into one file to simplify DSO interaction.
	* include/bits/std_iostream.h: Touch.
	* include/bits/ios_base.h (_S_synched_with_stdio): Make static.
	* src/Makefile.am (sources): Remove stdstreams.cc.
	* src/Makefile.in: Regenerate.

2001-01-10  Gabriel Dos Reis  <gdr@merlin.codesourcery.com>

	* tests_flags.in (check_directory): Fix typo.

2001-01-09  Peter Schmid  <schmid@snake.iap.physik.tu-darmstadt.de>

         * include/bits/std_complex.h: Fix a typo.

2001-01-09  Loren J. Rittle  <ljrittle@acm.org>

	* config/os/bsd/freebsd/bits/ctype_inline.h (is): (Make right
	code path:) Remove magic constants and restructure to handle
	ctype.h bit mask layout changes more gracefully.  (Make fast
	code path:) Use __maskrune (), if available.
	(is): Remove special case for digit and xdigit masks.

2001-01-09  Robert Lipe <robertlipe@usa.net>

	* include/c_std/bits/std_ctime.h: Undefine difftime.

2001-01-09  Alexandre Oliva  <aoliva@redhat.com>

	* src/gen-num-limits.cc (signal_adapter): New template function.
	(signal_handler): Use it, instead of signal.
	(traps<T>): Likewise.  Install SIGTRAP handler too.  Don't
	require both tests to trap to set trap_flag.

2001-01-08  Benjamin Kosnik  <bkoz@redhat.com>

	* include/bits/fpos.h (fpos:::fpos(streamoff __pos)): Explicitly
	initialize mbstate_t member, name offset data members *off, not pos.
	* include/bits/fstream.tcc (filebuf::filebuf): Same.
	
2001-01-08  Benjamin Kosnik  <bkoz@redhat.com>

	reported by Chris G. Demetriou <cgd@sibyte.com>
	* configure.in: Change -linux-* to -linux*.
	* configure: Regenerate.
	