@@ -1,3 +1,10 @@
+2001-01-10  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* src/ios.cc: Fix typo: change cout->wcout.
+
+	* src/Makefile.am (targetincludep): Fix for version-specific-libs.
+	* src/Makefile.in: Regenerate.
+
 2001-01-10  Peter Schmid  <schmid@snake.iap.physik.tu-darmstadt.de>
 
          * include/bits/std_complex.h: Fix a typo.
